[metadata]
description-file = README.md

[pep8]
# Skip errors and warnings
# E111 indentation is not a multiple of four
# E114 indentation is not a multiple of four (comment)
ignore=E111,E114

# Set maximum allowed line length (default: 79)
max-line-length=80

[tool:pytest]
pep8ignore = E111 E114
pep8maxlinelength = 80
